--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Joseph Bonaparte, King of Spain, 1768-1844'
 - !lcsh 'Louis Bonaparte, King of Holland, 1778-1846'
 - !lcsh 'Europe -- History -- 1789-1815'
+- GITenberg
 title: 'Les Rois Frères de Napoléon Ier
 
   Documents inédits relatifs au premier Empire'
